--- a/styles.css
+++ b/styles.css
@@ -26,15 +26,15 @@ body {
     background-size: contain;
     text-align: center;
     align-items: center;
-    
+
 }
 
 .container {
     height: 100vh;
     display: grid;
-    grid-template-columns: 50% 50%;    
-    
-    
+    grid-template-columns: 50% 50%;
+
+
 }
 
 .containerButton {
@@ -49,7 +49,7 @@ body {
 
 .secondaryButton {
     background-color: transparent;
-    border: 1px solid var(--main-white); 
+    border: 1px solid var(--main-white);
 }
 
 .containerNotice {
@@ -69,7 +69,7 @@ body {
 .containerBox {
     margin: 0em 6em;
 
-   
+
 }
 
 .descriptionImage {
@@ -79,6 +79,7 @@ body {
 
 .secondary {
     margin: 0 10em;
+    align-items: center;
 }
 
 .descriptionTitle {
@@ -121,14 +122,14 @@ body {
     list-style: none;
     gap: 5em;
     font-size: 2rem;
-  
-}    
-    
+
+}
+
 .footer {
     text-align: center;
     font-weight: 400;
     margin-bottom: 2em;
-    
+
 }
 
 .footerList {
@@ -137,7 +138,7 @@ body {
     list-style: none;
     gap: 16px;
     margin: 3em 0;
-    
+
 }
 
 .footerList a {
@@ -152,6 +153,7 @@ body {
     flex-direction: column;
     gap: 1.5em;
 }
+
 .listLink:hover {
     color: #C0C0C0;
 }
@@ -167,15 +169,18 @@ body {
 @media screen and (max-width: 768px) {
     .container {
         display: block;
-        background-image: none;  
+        background-image: none;
         height: 80vh;
     }
+
     .containerImage {
         width: 50vw;
     }
+
     .containerBox {
         margin: 2em;
     }
+
     .secondary {
         margin: 0;
         text-align: center;
@@ -193,16 +198,16 @@ body {
         display: block;
         margin: 0;
         font-size: 1.5rem;
-     
+
     }
 
     .footerList {
         display: block;
         text-align: center;
     }
+
     .paragraphFooter {
         margin: 2em 2em;
     }
-   
-}
 
+}
